UF-965 - Templating
An initial, mostly working version
