# src/main/java/se/sundsvall/templating/api/domain/DirectRenderRequest.java
@@ -4,18 +4,19 @@ import java.util.Map;
 
 import javax.validation.constraints.NotBlank;
 
+import io.swagger.v3.oas.annotations.media.Schema;
 import lombok.Getter;
 import lombok.Setter;
 
-/**
- * A request to render a template directly.
- */
 @Getter
 @Setter
+@Schema(description = "Request to render a template directly")
 public class DirectRenderRequest {
 
     @NotBlank
-    private String template;
+    @Schema(description = "The template content")
+    private String content;
 
+    @Schema(description = "Parameters", nullable = true)
     private Map<String, Object> parameters;
 }
